--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,5 @@
+version 0.6  [April 13] update MPD SDK lib. Add peer id as the suffix of trace file name.
+
 version 0.5  [April 3] update MPD SDK lib. Fix potentially crash when integrated with online test platform. Update score module.
 
 version 0.4  [Mar 17] update MPD SDK lib to fix some bugs, add score trace, update get_score start time
